--- a/static/styles.css
+++ b/static/styles.css
@@ -429,3 +429,33 @@ footer {
     justify-content: flex-start;
     align-items: center;
 }
+
+.product-top {
+    display: flex;
+    justify-content: space-between;  /* Creates space between back button and state-select */
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.state-select {
+    display: flex;
+    align-items: center;
+}
+
+.state-select select {
+    margin-left: 10px;
+    padding: 5px;
+    background-color: #ffffff;
+    color: #333333;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+}
+
+.back-button button {
+    padding: 10px 20px;
+    background-color: #333333;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
